--- a/index.html
+++ b/index.html
@@ -3,89 +3,148 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pedir Taxi | Mi Taxi</title>
+  <title>Pedir Taxi | Parada Oficial</title>
+
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: linear-gradient(135deg, #f7f7f7, #eaeaea);
     }
-    .container {
-      max-width: 480px;
+
+    .app {
+      max-width: 420px;
       margin: auto;
-      background: #ffffff;
-      padding: 20px;
       min-height: 100vh;
+      background: #ffffff;
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
     }
-    h1 {
+
+    header {
       text-align: center;
+      padding: 10px 0 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 26px;
       color: #222;
     }
-    p {
-      text-align: center;
-      color: #555;
+
+    header p {
+      margin-top: 5px;
+      color: #666;
+      font-size: 14px;
     }
+
+    .card {
+      background: #f9f9f9;
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
+    }
+
     label {
-      display: block;
+      font-weight: 600;
       margin-top: 15px;
-      font-weight: bold;
+      display: block;
+      color: #333;
     }
+
     input, textarea {
       width: 100%;
-      padding: 12px;
-      margin-top: 5px;
+      margin-top: 6px;
+      padding: 14px;
       font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      outline: none;
     }
+
+    input:focus, textarea:focus {
+      border-color: #25D366;
+    }
+
     textarea {
       resize: none;
     }
-    button {
-      margin-top: 20px;
+
+    .btn {
+      margin-top: 25px;
       width: 100%;
-      padding: 15px;
+      padding: 16px;
       font-size: 18px;
+      font-weight: bold;
+      border: none;
+      border-radius: 14px;
       background: #25D366;
       color: white;
-      border: none;
-      border-radius: 8px;
       cursor: pointer;
+      transition: transform 0.1s ease, background 0.2s ease;
     }
-    button:hover {
+
+    .btn:hover {
       background: #1ebe5d;
     }
-    .footer {
+
+    .btn:active {
+      transform: scale(0.98);
+    }
+
+    footer {
       text-align: center;
-      margin-top: 20px;
-      font-size: 14px;
+      font-size: 13px;
       color: #777;
+      margin-top: auto;
+      padding: 15px 0 5px;
+    }
+
+    .badge {
+      display: inline-block;
+      background: #eee;
+      padding: 6px 12px;
+      border-radius: 20px;
+      font-size: 13px;
+      margin-top: 10px;
     }
   </style>
 </head>
+
 <body>
-  <div class="container">
-    <h1>🚕 Mi Taxi</h1>
-    <p>Pedí tu taxi rápido y sin llamadas<br>Mercedes, Buenos Aires</p>
+  <div class="app">
 
-    <label for="origen">📍 Dirección de salida</label>
-    <input type="text" id="origen" placeholder="Ej: Calle 123" required />
+    <header>
+      <h1>🚕 Parada de Taxis</h1>
+      <p>Mercedes, Buenos Aires</p>
+      <div class="badge">Servicio 24 hs</div>
+    </header>
 
-    <label for="destino">🏁 Destino</label>
-    <input type="text" id="destino" placeholder="Ej: Hospital" required />
+    <div class="card">
+      <label>📍 Dirección de salida</label>
+      <input type="text" id="origen" placeholder="Ej: Calle 123" required>
 
-    <label for="nombre">👤 Nombre</label>
-    <input type="text" id="nombre" placeholder="Tu nombre" />
+      <label>🏁 Destino</label>
+      <input type="text" id="destino" placeholder="Ej: Hospital" required>
 
-    <label for="obs">📝 Observaciones</label>
-    <textarea id="obs" rows="3" placeholder="Ej: Casa con portón negro"></textarea>
+      <label>👤 Nombre</label>
+      <input type="text" id="nombre" placeholder="Opcional">
 
-    <button onclick="pedirTaxi()">PEDIR TAXI</button>
+      <label>📝 Observaciones</label>
+      <textarea id="obs" rows="3" placeholder="Ej: Portón negro, timbre roto"></textarea>
 
-    <div class="footer">
-      También podés llamar si lo preferís
+      <button class="btn" onclick="pedirTaxi()">PEDIR TAXI</button>
     </div>
+
+    <footer>
+      También podés llamar a la parada si lo preferís
+    </footer>
+
   </div>
 
   <script>
@@ -113,5 +172,6 @@
       window.open(url, '_blank');
     }
   </script>
+
 </body>
 </html>
