Add header with logo to index.html
Added a header div with logo image to the HTML.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <div class="header">
+  <img src="logo-mitaxi.png" alt="Mi Taxi 24hs - Mercedes Bs. As.">
+  </div>
   <title>Mi Taxi 24hs - Mercedes Bs. As.</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
